src/components/sbb-navigation/sbb-navigation.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

@mixin transition($properties...) {
  transition: {
    duration: var(--sbb-navigation-animation-duration);
    timing-function: var(--sbb-navigation-animation-easing);
    property: $properties;
  }
}

:host {
  --sbb-navigation-grid-column: 1 / 5;
  --sbb-navigation-animation-duration: var(--sbb-animation-duration-3x);
  --sbb-navigation-animation-easing: ease-in;
  --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive);
  --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-l);
  --sbb-navigation-padding-block-end: var(--sbb-spacing-responsive-xl);
  --sbb-navigation-backdrop-visibility: hidden;
  --sbb-navigation-backdrop-pointer-events: none;
  --sbb-navigation-backdrop-color: transparent;
  --sbb-navigation-list-margin-block-start: var(--sbb-spacing-responsive-xxl);
  --sbb-navigation-inline-start: 0;
  --sbb-navigation-height: 100vh;
  --sbb-navigation-width: 100%;
  --sbb-navigation-expanded-width: 100%;
  --sbb-navigation-inset: 0 auto auto 0;
  --sbb-navgation-transform: translateX(-100%);
  --sbb-navigation-content-transform: translateX(0);
  --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);

  // We use this rule to make the inner container element to appear as if it were a
  // direct child of the host's parent element. This is useful because the host
  // should be ignored when using CSS grid or similar layout techniques.
  display: contents;

  @include sbb.mq($from: medium) {
    --sbb-navigation-grid-column: 1 / 9;
  }

  @include sbb.mq($from: large) {
    --sbb-navigation-grid-column: 1 / 5;
    --sbb-navigation-animation-duration: var(--sbb-animation-duration-6x);
    --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xl);
    --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive) 0;
    --sbb-navigation-list-margin-block-start: var(--sbb-spacing-fixed-1x);
    --sbb-navigation-inline-start: calc(var(--sbb-layout-base-offset-responsive) * -1);
    --sbb-navigation-width: calc(100% + var(--sbb-layout-base-offset-responsive));
  }

  @include sbb.mq($from: ultra) {
    --sbb-navigation-grid-column: 1 / 6;
    --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xxl);
  }
}

:host([data-state='opened']) {
  --sbb-navigation-animation-easing: ease-out;
}

:host(:is([data-state='opened'], [data-state='opening'])) {
  --sbb-navigation-backdrop-visibility: visible;
  --sbb-navigation-backdrop-pointer-events: all;
  --sbb-navigation-backdrop-color: var(--sbb-color-black-alpha-70);
}

:host(:not([data-state='closed'])) {
  --sbb-navigation-inset: 0;
  --sbb-navgation-transform: translateX(0);
}

:host([data-has-navigation-section]) {
  --sbb-navigation-content-transform: translateX(-100%);

  @include sbb.mq($from: 'large') {
    --sbb-navigation-expanded-width: 100vw;
    --sbb-navigation-content-transform: translateX(0%);
  }
}

:host([disable-animation]:not([disable-animation='false'])) {
  --sbb-navigation-animation-duration: 0s;
}

.sbb-navigation__container {
  @include sbb.grid-base;

  padding-inline: 0;
  position: fixed;
  inset: var(--sbb-navigation-inset);
  pointer-events: none;
  overflow: hidden;
  z-index: var(--sbb-navigation-z-index, var(--sbb-overlay-z-index));
  transform: var(--sbb-navgation-transform);

  @include sbb.mq($from: large) {
    padding-inline: var(--sbb-layout-base-offset-responsive);

    // Navigation backdrop (not visible on mobile)
    &::before {
      @include transition(background-color, visibility);

      content: '';
      visibility: var(--sbb-navigation-backdrop-visibility);
      pointer-events: var(--sbb-navigation-backdrop-pointer-events);
      position: fixed;
      inset: var(--sbb-navigation-inset);
      background-color: var(--sbb-navigation-backdrop-color);
    }
  }
}

.sbb-navigation {
  @include transition(width);

  display: block;
  width: var(--sbb-navigation-width);
  grid-column: var(--sbb-navigation-grid-column);
  padding: 0;
  margin: 0;
  position: relative;
  visibility: hidden;
  opacity: 0;
  inset-inline-start: var(--sbb-navigation-inline-start);
  inset-block-start: 0;
  border: none;
  pointer-events: none;
  height: var(--sbb-navigation-height);
  color: var(--sbb-color-white-default);
  background-color: var(--sbb-color-midnight-default);

  &::before {
    @include transition(width);

    content: '';
    position: absolute;
    width: var(--sbb-navigation-expanded-width);
    height: var(--sbb-navigation-height);
    background: var(--sbb-color-midnight-default);
  }

  &[open] {
    visibility: visible;
    opacity: 1;
    pointer-events: all;

    animation: {
      name: open;
      duration: var(--sbb-navigation-animation-duration);
      timing-function: var(--sbb-navigation-animation-easing);
    }
  }

  :host([data-state='closing']) & {
    pointer-events: none;
    animation-name: close;
  }

  @include sbb.if-forced-colors {
    outline: var(--sbb-border-width-1x) solid CanvasText;
  }
}

.sbb-navigation__wrapper {
  outline: none;
}

.sbb-navigation__header {
  @include transition(width);

  display: flex;
  justify-content: flex-end;
  position: absolute;
  width: var(--sbb-navigation-expanded-width);
  pointer-events: none;
  padding: var(--sbb-spacing-responsive-xs);
  z-index: calc(var(--sbb-navigation-z-index, var(--sbb-overlay-z-index)) + 1);
}

.sbb-navigation__close {
  pointer-events: all;
}

.sbb-navigation__content {
  @include transition(transform);
  @include sbb.scrollbar-dark;

  display: flex;
  flex-direction: column;
  gap: var(--sbb-spacing-responsive-xxl);
  position: relative;
  height: var(--sbb-navigation-height);
  padding-inline: var(--sbb-navigation-padding-inline);
  padding-block-start: var(--sbb-navigation-padding-block-start);
  padding-block-end: var(--sbb-navigation-padding-block-end);
  overflow-y: auto;
  transform: var(--sbb-navigation-content-transform);
}

::slotted(:first-child) {
  margin-block-start: var(--sbb-navigation-list-margin-block-start);
}

@keyframes open {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0%);
  }
}

@keyframes close {
  from {
    transform: translateX(0%);
  }

  to {
    transform: translateX(-100%);
  }
}

